--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
 <nav>
 	<a href="#">Instructions</a>
 	<a href="#">Game</a>
+	<a id="reset">Reset</a>
 </nav>
 <main>
-<h2>Instructions</h2>
+	<h2>Instructions</h2>
 	<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
-	<div>
-		<img src="images/back.png" alt="Queen of Diamonds">
-		<img src="images/back.png" alt="Queen of Hearts">
-		<img src="images/back.png" alt="King of Diamonds">
-		<img src="images/back.png" alt="King of Hearts">
-	</div>
+	<h2>Score</h2>
+	<p id="score-board">0</p>
+	<div id="game-board" class="board clearfix"></div>
 </main>
 <footer class="clearfix">
 	<p class="copyright">Copyright 2017</p>
